update html, css layouts

--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="index.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <title>PokeData</title>
 </head>
 <body>
-    
+<div class="leftcolumn">
+    <h1>WELCOME TO THE POKEMON DATABASE</h1>
+    <h3>Battle with confidence</h3>
+        <div class="searchcontainer">
+            <form class="searchbar">
+                <input type="text" placeholder="search pokemon" name="q">
+                <button type="submit"><img src="/extra_images/searchicon.png"></button>
+            </form>
+        </div>
+</div>
+
+<div class="rightcolumn">
+    <h1>TESTING</h1>
+    <p>Testing this side out</p>
+</div>
+
 </body>
 </html>
