cleaned up CSS and HTML

--- a/index.html
+++ b/index.html
@@ -12,21 +12,48 @@
     <title>PokeData</title>
 </head>
 <body>
-<div class="leftcolumn">
-    <h1>WELCOME TO THE POKEMON DATABASE</h1>
-    <h3>Battle with confidence</h3>
-        <div class="searchcontainer">
-            <form class="searchbar">
-                <input type="text" placeholder="search pokemon" name="q">
-                <button type="submit"><img src="/extra_images/searchicon.png"></button>
-            </form>
+    <div class="all-rows">
+        <div class="left-column">
+            <h1>WELCOME TO THE</br> POKEMON DATABASE</h1>
+            <h3>Battle with trainers with confidence</h3>
+            <div class="search-container">
+                <form class="searchbar">
+                    <input type="text" placeholder="search pokemon" name="q">
+                    <button type="submit"><img src="/extra_images/searchicon.png"></button>
+                </form>
+            <h4>Create by Jason Ballejo for Ironflat school</h4>
+            </div>
         </div>
-</div>
-
-<div class="rightcolumn">
-    <h1>TESTING</h1>
-    <p>Testing this side out</p>
-</div>
-
-</body>
+        <div class="right-column">
+            <div class="flexbox-container">
+                <div class="flexbox-item flexbox-item-1"> <!-- Pokemon Card -->
+                    <div class="column-one">
+                        <h3>Charizard</h3> 
+                        <img class="pokemon_img" src="/poke_images/charizard.jpeg">
+                    </div>
+    
+                    <div class="column-two">
+                        <h3>Pokemon Stats</h3>
+                        <p>Number:</p>
+                        <p>Height:</p>
+                        <p>Weight:</p>
+                        <p>Types:</p>
+                        <p>Base Stat:</p>
+                        <p>Species</p>
+                    </div>
+                    <div class="column-three">
+                        <p>HP:</p>                 
+                        <p>Attack:</p>
+                        <p>Defense:</p>
+                        <p>Special-Attack:</p>
+                        <p>Special-Defense:</p>
+                        <p>Speed:</p>
+                        <p>Ability</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> 
+    
+    </body>
 </html>
