README requirements updates

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <input type="text" placeholder="search pokemon" name="q">
                     <button type="submit"><img src="/extra_images/searchicon.png"></button>
                 </form>
-            <h4>Create by Jason Ballejo for Ironflat school</h4>
+            <h4>Created by Jason Ballejo for Flatiron school</h4>
             </div>
         </div>
         <div class="right-column">
@@ -48,7 +48,7 @@
                         <p>Special-Attack:</p>
                         <p>Special-Defense:</p>
                         <p>Speed:</p>
-                        <p>Ability</p>
+                        <p>Ability:</p>
                     </div>
                 </div>
             </div>
