Render cards updated

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             <h3>Battle with trainers with confidence</h3>
             <div class="search-container">
                 <form class="searchbar">
-                    <input type="text" placeholder="search pokemon" name="q">
-                    <button type="submit"><img src="/extra_images/searchicon.png"></button>
+                    <input type="text" placeholder="search pokemon" name="name">
+                    <button type='submit' class="btn"><img src="/extra_images/searchicon.png"></button>
                 </form>
             <h4>Created by Jason Ballejo for Flatiron school</h4>
             </div>
         </div>
         <div class="right-column">
             <div class="flexbox-container">
-                <div class="flexbox-item flexbox-item-1"> <!-- Pokemon Card -->
+                <!-- <div class="flexbox-item flexbox-item-1"> 
                     <div class="column-one">
-                        <h3>Charizard</h3> 
+                        <h2>Charizard</h2> 
                         <img class="pokemon_img" src="/poke_images/charizard.jpeg">
                     </div>
     
@@ -39,7 +39,7 @@
                         <p>Weight:</p>
                         <p>Types:</p>
                         <p>Base Stat:</p>
-                        <p>Species</p>
+                        <p>Moves</p>
                     </div>
                     <div class="column-three">
                         <p>HP:</p>                 
@@ -50,7 +50,7 @@
                         <p>Speed:</p>
                         <p>Ability:</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div> 
