Event Listeners Update

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <h1>WELCOME TO THE</br> POKEMON DATABASE</h1>
             <h3>Battle with trainers with confidence</h3>
             <div class="search-container">
-                <form class="searchbar">
-                    <input type="text" placeholder="search pokemon" name="name">
+                <form id="searchbar">
+                    <input type="text" id="search" placeholder="search pokemon" name="name">
                     <button type='submit' class="btn"><img src="/extra_images/searchicon.png"></button>
                 </form>
             <h4>Created by Jason Ballejo for Flatiron school</h4>
