--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
             <div class="flexbox-container"> 
             <!-- Pokemon card will go here -->
             </div>
-
-            <div>
-                <img src="/images/blastoise.jpeg" id="theimage">
-            </div>
-
+            <div class="flexbox-container2"></div>
         </div>
     </div> 
     <script src="index.js"></script>
