README update usage and installation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="all-rows">
         <div class="left-column">
             <h1>WELCOME TO THE</br> POKEMON DATABASE</h1>
-            <h3>Battle with trainers with confidence</h3>
+            <h3>Battle trainers with confidence</h3>
             <div class="search-container">
                     <div class="searchBox">
                     <input id="pokemonName" type="text" placeholder="Search Pokemon">
