--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
             <!-- Pokemon card will go here -->
             </div>
             <div class="flexbox-container2"></div>
+            
+            <div class="welcome-card">
+                <div class="card">
+                    <h2>Welcome!</h2>
+                    <img id="gengar" src="/gengar.png">
+                    <p>Welcome to the Pokemon Database</p>
+                    <p></p>
+                </div>
+            </div>
+
         </div>
     </div> 
     <script src="index.js"></script>
