Style and text updates

--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
             </div>
             <div class="flexbox-container2"></div>
             
-            <div class="welcome-card">
-                <div class="card">
-                    <h2>Welcome!</h2>
+            <div class="welcome-card"> <!-- container -->
+                <div class="left">
                     <img id="gengar" src="/gengar.png">
+                </div>
+
+                <div class="right">
+                    <h1>Welcome!</h1>
                     <p>Welcome to the Pokemon Database</p>
                     <p></p>
                 </div>
