Finalizing HTML/CSS/README info

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
         </div>
         <div class="right-column">
             <div class="flexbox-container"> 
-            <!-- Pokemon card will go here -->
-            </div>
-            <div class="flexbox-container2"></div>
-            
-            <div class="welcome-card"> <!-- container -->
+            <div class="welcome-card">
                 <div class="left">
                     <img id="gengar" src="/gengar.png">
                 </div>
 
                 <div class="right">
-                    <h1>Welcome!</h1>
-                    <p>Welcome to the Pokemon Database</p>
-                    <p></p>
-                </div>
+                    <h1>WELCOME</h1>
+                    <p>Choose your Pokemon on the left!</p>
+                </div> 
+            </div>
+            <!-- Pokemon card will go here -->
             </div>
 
+            <div class="flexbox-container2">
+            <!-- Shiny Statment goes here -->
+            </div>
         </div>
     </div> 
     <script src="index.js"></script>
