HTML update - Welcome Card on page

--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
         </div>
         <div class="right-column">
             <div class="flexbox-container"> 
-            <div class="welcome-card">
+            <div class="welcome-card"> <!-- Welcome Card will go away once Pokemon searched -->
                 <div class="left">
                     <img id="gengar" src="/gengar.png">
                 </div>
-
                 <div class="right">
                     <h1>WELCOME</h1>
                     <p>Choose your Pokemon on the left!</p>
