--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="right-column">
             <div class="flexbox-container"> 
-            <div class="welcome-card">  <!-- Welcome Card will go away once Pokemon searched -->
+            <div class="welcome-card">  <!-- Welcome Card will go away once Pokemon searched -->   
                 <div class="left">
                     <img id="gengar" src="/gengar.png">
                 </div>
@@ -34,11 +34,25 @@
                     <p>Choose your Pokemon on the left!</p>
                 </div> 
             </div>
+            <div class="flexbox-item flexbox-item-1"> 
+                <div class="column-one">
+                    <h2 id="pokeName"></h2>
+                    <img id="pokeImage">
+                </div>
+                <div class="column-two">
+                    <h3>Pokemon Stats</h3>
+                </div>
+                <div class="column-three">
+
+                </div>
+            </div>
             <!-- Pokemon card will go here -->
             </div>
 
             <div class="flexbox-container2">
-            <!-- Shiny Statment goes here -->
+                <div class="Bottom">
+                <h4>Hover over the image to change into it's shiny form ✨</h4>
+                </div>
             </div>
         </div>
     </div> 
