--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                 </div>
                 <div class="right">
                     <h1>WELCOME</h1>
-                    <p>Choose your Pokemon on the left!</p>
+                    <h5>Choose your Pokemon on the left!</h5>
                 </div> 
             </div>
             <div class="flexbox-item flexbox-item-1"> 
+                <!-- Pokemon card will go here -->
                 <div class="column-one">
                     <h2 id="pokeName"></h2>
                     <img id="pokeImage">
@@ -44,9 +45,9 @@
                 </div>
                 <div class="column-three">
 
-                </div>
+                </div> 
             </div>
-            <!-- Pokemon card will go here -->
+
             </div>
 
             <div class="flexbox-container2">
